# sdkd-cxx

./: .gitmodules  CMakeLists.txt
pylib/: s3upload.py
src/: CBASLoader.cpp  CBASQueryExecutor.cpp  Control.cpp  Daemon.cpp  Dataset.cpp  Error.h  FTSLoader.cpp  FTSQueryExecutor.cpp  Handle.cpp  Handle.h  IODispatch.cpp  IODispatch.h  Main.cpp  Message.cpp  N1QLDataset.cpp  N1QLLoader.cpp  N1QLQueryExecutor.cpp  ResultSet.cpp  SDDataset.cpp  SDLoader.cpp  UsageCollector.cpp  ViewExecutor.cpp  ViewLoader.cpp  Worker.cpp  n1ql.h
